--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-04-30  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 131139 ****
+
+	* classes/DebuggerOptions.cs
+	(DebuggerOptions.SetupXSP): Don't immediately start the target, so
+	we can insert breakpoints.
+
 2009-04-06  Martin Baulig  <martin@ximian.com>
 
 	**** Backport of 130760, 130761 and 131140 ****
