--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2009-04-15  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 131799 ****
+
+	* symbolwriter/MonoSymbolTable.cs
+	(LineNumberTable.DW_LNE_MONO__extensions_start): New const.
+	(LineNumberTable.DW_LNE_MONO__extensions_end): New const.
+	(LineNumberTable.DoRead): Ignore unknown extended opcodes if
+	they're within the Mono extension range.
+
 2009-04-15  Jonathan Chambers  <joncham@gmail.com>
 
 	**** Backport of 131777 ****
