--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2009-04-14  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 130661, 130759, 131797 and 131798 ****
+
+	* symbolwriter/ndesk-options.cs: New file; copied
+	src/NDesk.Options/NDesk.Options/Options.cs from NDesk.Options.
+
+	* symbolwriter/MdbSymbolReader.cs: Some more work on printing the
+	contents of a symbol file instead of just verifying it.
+
+	* build/mdb-symbolreader.in: New file; create a `mdb-symbolreader'
+	wrapper script.
+
 2009-04-30  Martin Baulig  <martin@ximian.com>
 
 	**** Backport of 131812, 131813, 131814 and 131817 ****
@@ -134,9 +147,6 @@
 
 	- cosmetic fixes which have not yet been merged:
 	130985.
-
-	- mdb-symbolreader changes which have not yet been merged:
-	130661, 130759, 131797 and 131798.
 
 	- monodis and lesspipe have not yet been merged:
 	130986, 130987, 130988, 130989, 131093.
