**** Backport of 131823, 131838 and 131839 **** 2009-04-16  Martin Baulig  <martin@ximian.com>
	**** Backport of 131838 ****

	Add support for 'source ranges' - instead of only using line
	numbers, we now use a struct containing 'StartLine', 'EndLine',
	'StartColumn' and 'EndColumn'.

	* classes/Method.cs
	(LineEntry.SourceRange): New public field.

	* classes/SourceAddress.cs
	(SourceAddress.HasSourceRange): New public property.
	(SourceAddress.SourceRange): New public property.
	(SourceRange): New public struct.

2009-04-15  Martin Baulig  <martin@ximian.com>

	**** Backport of 131823 ****

	* classes/SourceAddress.cs
	(SourceAddress): Rename `SourceOffset' -> `LineOffset' and
	`SourceRange' -> `LineRange'.

2009-04-16  Martin Baulig  <martin@ximian.com>

	**** Backport of 131838 and 131839 ****

	* MonoSymbolTable.cs
	(SourceRangeEntry): New public class.
	(LineNumberEntry.SourceRange): New public field.
	(LineNumberTable): Add support for source ranges.
	(LineNumberTable.DW_LNE_MONO_set_source_range): New private
	extended opcode to encode source ranges.

	* MonoSymbolWriter.cs
	(MonoSymbolWriter.MarkSequencePoint): Add overloaded version
	supporting source ranges.

svn path=/branches/mono-2-4/debugger/; revision=133137

--- a/symbolwriter/ChangeLog
+++ b/symbolwriter/ChangeLog
@@ -1,3 +1,18 @@
+2009-04-16  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 131838 and 131839 ****
+
+	* MonoSymbolTable.cs
+	(SourceRangeEntry): New public class.
+	(LineNumberEntry.SourceRange): New public field.
+	(LineNumberTable): Add support for source ranges.
+	(LineNumberTable.DW_LNE_MONO_set_source_range): New private
+	extended opcode to encode source ranges.
+
+	* MonoSymbolWriter.cs
+	(MonoSymbolWriter.MarkSequencePoint): Add overloaded version
+	supporting source ranges.
+
 2009-03-31  Martin Baulig  <martin@ximian.com>
 
 	* MdbSymbolReader.cs
