**** Backport of 130985 **** 2009-04-03  Martin Baulig  <martin@ximian.com>
	**** Backport of 130985 ****

	* configure.in: Kill the old pre-historic `server_only'.

svn path=/branches/mono-2-4/debugger/; revision=133140

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-04-03  Martin Baulig  <martin@ximian.com>
+
+	**** Backport of 130985 ****
+
+	* configure.in: Kill the old pre-historic `server_only'.
+
 2009-04-24  Jonathan Chambers  <joncham@gmail.com>
 
 	**** Backport of 132585 ****
