--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+2009-04-30  Martin Baulig  <martin@ximian.com>
+
+	Merge status as of April 29th:
+
+	- merged until 133023.
+
+	- reverted revisions:
+	128557, 128559, 132026, 132028, 132029, 132584, 132586.
+
+	- jchambers changes which will not be merged:
+	129763, 129857, 131778, 131779, 132539, 132651, 132674,
+	132697, 132803.
+
+	- monodis and lesspipe have not yet been merged:
+	130986, 130987, 130988, 130989, 131093.
+
+	- experimental code which will not be merged:
+	132841, 132843
+
 2009-04-03  Martin Baulig  <martin@ximian.com>
 
 	**** Backport of 130985 ****
@@ -186,24 +205,6 @@
 	* test/testsuite/NUnit.cs
 	(TestSuite.ctor): Set `config.RedirectOutput' since we're
 	examining it in the tests.
-
-2009-04-30  Martin Baulig  <martin@ximian.com>
-
-	Merge status as of April 29th:
-
-	- merged until 132025.
-
-	- already merged 133002 and 133023.
-
-	- 128557 has been reverted in 128559.
-
-	- 129763, 129857, 131778 and 131779 will not be merged (jchambers).
-
-	- cosmetic fixes which have not yet been merged:
-	130985.
-
-	- monodis and lesspipe have not yet been merged:
-	130986, 130987, 130988, 130989, 131093.
 
 2009-04-30  Martin Baulig  <martin@ximian.com>
 
