--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
 	- reverted revisions:
 	128557, 128559, 132026, 132028, 132029, 132584, 132586.
 
+	- broken revisions: 132585.
+
 	- jchambers changes which will not be merged:
 	129763, 129857, 131778, 131779, 132539, 132651, 132674,
 	132697, 132803.
@@ -22,13 +24,6 @@
 	**** Backport of 130985 ****
 
 	* configure.in: Kill the old pre-historic `server_only'.
-
-2009-04-24  Jonathan Chambers  <joncham@gmail.com>
-
-	**** Backport of 132585 ****
-
-	* configure.in: Do simple numeric check for nunit
-	version since buildbot sets version to svn rev.
 
 2009-04-17  Martin Baulig  <martin@ximian.com>
 
