--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+2009-04-30  Martin Baulig  <martin@ximian.com>
+
+	Merge status as of April 29th:
+
+	- merged until 133023.
+
+	- reverted revisions:
+	128557, 128559, 132026, 132028, 132029, 132584, 132586.
+
+	- jchambers changes which will not be merged:
+	129763, 129857, 131778, 131779, 132539, 132651, 132674,
+	132697, 132803.
+
+	- monodis and lesspipe have not yet been merged:
+	130986, 130987, 130988, 130989, 131093.
+
+	- experimental code which will not be merged:
+	132841, 132843
+
 2009-04-29  Martin Baulig  <martin@ximian.com>
 
 	* languages/mono/MonoSymbolFile.cs
