Updated merge status.
svn path=/trunk/debugger/; revision=133144

--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
 	- reverted revisions:
 	128557, 128559, 132026, 132028, 132029, 132584, 132586.
 
+	- broken revisions: 132585.
+
 	- jchambers changes which will not be merged:
 	129763, 129857, 131778, 131779, 132539, 132651, 132674,
 	132697, 132803.
