--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,24 @@
+2009-05-02  Martin Baulig  <martin@ximian.com>
+
+	Don't step into any signal handlers during source-level stepping.
+
+	* backend/server/library.c
+	(mono_debugger_server_get_pending_signal): New public function.
+
+	* backend/server/server.h
+	(InferiorVTable): Added `get_pending_signal'.
+
+	* backend/Inferior.cs
+	(Inferior.GetPendingSignal): New public method.
+
+	* backend/SingleSteppingEngine.cs
+	(SSE.do_next_native): Renamed into `do_next'.
+	(SSE.do_step): New function; same as do_step_native(), but don't
+	step into any signal handlers.
+	(SSE.OperationStep): Use do_step() instead of do_step_native(),
+	except when doing single-instruction stepping, don't step into any
+	signal handlers when doing source-level stepping.
+
 2009-04-30  Martin Baulig  <martin@ximian.com>
 
 	* classes/Breakpoint.cs
