2009-05-02  Jonathan Chambers  <joncham@gmail.com>
	* backend/EventQueue.cs (DebuggerEventQueue): Add timed Wait.



svn path=/trunk/debugger/; revision=133416

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-05-02  Jonathan Chambers  <joncham@gmail.com>
+
+	* backend/EventQueue.cs (DebuggerEventQueue): Add timed Wait.
+
 2009-05-02  Martin Baulig  <martin@ximian.com>
 
 	Don't step into any signal handlers during source-level stepping.
