2009-05-03  Martin Baulig  <martin@ximian.com>
	* configure.in: Drop support for older nunit's.

svn path=/branches/mono-2-4-1/debugger/; revision=133426

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2009-05-03  Martin Baulig  <martin@ximian.com>
+
+	* configure.in: Drop support for older nunit's.
+
 2009-04-30  Martin Baulig  <martin@ximian.com>
 
 	* classes/Breakpoint.cs
