--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-05-14  Martin Baulig  <martin@ximian.com>
+
+	* backend/MonoThreadManager.cs
+	(MonoThreadManager.ThreadCreated): We seem to be creating 3 daemon
+	threads again when using the latest runtime from trunk.
+
 2009-05-02  Jonathan Chambers  <joncham@gmail.com>
 
 	* README.win32: Update.
