--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,40 @@
+2009-05-19  Martin Baulig  <martin@ximian.com>
+
+	* backend/Inferior.cs
+	(Inferior.AbortInvoke): Only take `long rti_id' argument; we now
+	abort one specific invocation and don't search on the stack.
+
+	* backend/server/server.h
+	(InferiorVTable.abort_invoke): Only take a `guint64 rti_id'
+	argument, removed the `stack_pointer' and `*aborted_rti' ones.
+
+	* backend/server/x86_64-arch.c
+	(server_ptrace_abort_invoke): Only take a `guint64 rti_id'
+	argument, removed the `stack_pointer' and `*aborted_rti' ones.
+
+	* backend/server/i386-arch.c
+	(server_ptrace_abort_invoke): Only take a `guint64 rti_id'
+	argument, removed the `stack_pointer' and `*aborted_rti' ones.
+
+	* backend/SingleSteppingEngine.cs
+	(SSE.AbortRuntimeInvoke): Call `inferior.AbortInvoke()'.
+	(SSE.Return): Implement `ReturnMode.Invocation'.
+	(SSE.OperationReturn): Add support for aborting an entire
+	invocation.
+
+	* classes/Backtrace.cs
+	(Backtrace.TryCallback): Take a `ref StackFrame last_frame'
+	argument to allow the parent function to do some more checks on it
+	before adding it.
+	(Backtrace.TryUnwind): Improve handling of callback frames; also
+	check `until'.
+
+	* backend/ThreadServant.cs
+	(ThreadServant.AbortInvocation): Removed.
+
+	* classes/Thread.cs
+	(Thread.AbortInvocation): Removed.
+
 2009-05-18  Martin Baulig  <martin@ximian.com>
 
 	* classes/Thread.cs
