Set 'RuntimeInvokeFlags.NestedBreakStates' in InvocationExpression.DoInvoke(). 2009-05-19  Martin Baulig  <martin@ximian.com>
	* frontend/Expression.cs
	(InvocationExpression.DoInvoke): Add
	`RuntimeInvokeFlags.NestedBreakStates'.

svn path=/trunk/debugger/; revision=134408

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2009-05-19  Martin Baulig  <martin@ximian.com>
 
+	* frontend/Expression.cs
+	(InvocationExpression.DoInvoke): Add
+	`RuntimeInvokeFlags.NestedBreakStates'.	
+
+2009-05-19  Martin Baulig  <martin@ximian.com>
+
 	* classes/Thread.cs
 	(Thread.AbortInvocation): Added `long rti_id' argument.
 
