--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2009-06-02  Martin Baulig  <martin@ximian.com>
+
+	Fix #503989.
+
+	* backend/server/x86_64-arch.c
+	(x86_arch_child_stopped): Make this work when the NX-flag is
+	disabled in the BIOS.
+
 2009-05-28  Martin Baulig  <martin@ximian.com>
 
 	* backend/os/LinuxOperatingSystem.cs
